Fix caret alignment in btn-small and btn-mini

--- a/less/button-groups.less
+++ b/less/button-groups.less
@@ -143,6 +143,11 @@
 
 // Small button dropdowns
 .btn-small .caret {
-  margin-top: 4px;
+  margin-top: 7px;
+}
+
+// Mini button dropdowns
+.btn-mini .caret {
+  margin-top: 5px;
 }
 
